feat: Manually edited rare cases
1. Manually edited rare cases (less than 5)
2. Text cleaner function is ready for its first version

--- a/data.html
+++ b/data.html
@@ -1191,8 +1191,7 @@ Urartian: shid (build)<br />
 Kurdish: chê-[kirin], چێ (build cf, kurdish d&gt;nil)<br />
 <br />
 Hurrian: awari<br />
-Kurdish: awari ئەواری (land, country, field, cf.&nbsp; kurdawari, کوردەواری &nbsp;/ warê me وارێ مە)<br />
-(Armenian agarak has been suggested as an Armenian loan from 'awari'. Kurdish has even 'garak' with the same meaning).<br />
+Kurdish: awari ئەواری (land, country, field, cf.&nbsp; kurdawari, کوردەواری &nbsp;/ warê me وارێ مە) (Armenian agarak has been suggested as an Armenian loan from 'awari'. Kurdish has even 'garak' with the same meaning).<br />
 Urartian: ur (territory)<br />
 <br />
 Urartian: qapqari<br />
@@ -1355,8 +1354,7 @@ Kassite: ulam (son, child)<br />
 Urartian: alaue (man)<br />
 Kurdish: law لاو (young boy)<br />
 <br />
-Hurrian:&nbsp;
-çugi<br />
+Hurrian: çugi<br />
 Kassite: tsugi<br />
 Kurdish: chuk چووک (small)<br />
 <br />
@@ -1766,7 +1764,7 @@ Hurrian: kol (let off)<br />
 Kurdish: kol (let off) (as in ''le kol bunewe'')<br />
 <br />
 240)<br />
-Hurrian:shir (to be suffiecent)<br />
+Hurrian: shir (to be suffiecent)<br />
 Kurdish: têr (to be suffiecent)<br />
 <br />
 Hurrian: ha (take)<br />
