refactor: Modify the codes
Add comments and reformat

--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
 <link rel="service.post" type="application/atom+xml" title="Within Land of Kurda - Atom" href="https://www.blogger.com/feeds/9063580066197014451/posts/default" />
 
 <link rel="alternate" type="application/atom+xml" title="Within Land of Kurda - Atom" href="http://landofkarda.blogspot.com/feeds/5390066152871323448/comments/default" />
-<!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
+<!--Can't find substitution for break_tag [blog.ieCssRetrofitLinks]-->
 <link href='http://www.nelos.net/ku/images/kelashin.jpg' rel='image_src'/>
 <meta content='http://landofkarda.blogspot.com/2011/04/hurro-urartian-substratum-in-kurdish-2.html' property='og:url'/>
 <meta content='The Hurro-Urartian Substratum in Kurdish (2)' property='og:title'/>
@@ -958,7 +958,7 @@ October
 </div>
 <div class='main section' id='main'><div class='widget Blog' data-version='1' id='Blog1'>
 <div class='blog-posts hfeed'>
-<!--Can't find substitution for tag [adStart]-->
+<!--Can't find substitution for break_tag [adStart]-->
 <div class='post hentry uncustomized-post-template'>
 <a name='5390066152871323448'></a>
 <h3 class='post-title entry-title'>
@@ -1297,7 +1297,7 @@ Urartian: haš-ia: (be interested in)<br />
 Kurdish: haz حەز (be interested in, love, like)<br />
 <br />
 Urartian: d-u-: (do, cause to do)<br />
-Kurdish: da/di: <span class="Apple-style-span" style="border-collapse: separate; color: black; font-family: 'Times New Roman'; font-size: xx-small; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px;"><span class="Apple-style-span"><span class="Apple-converted-space"></span></span></span> ده/د (do, cause to do, used as a preffix for verbs)<br />
+Kurdish: da/di: ده/د (do, cause to do, used as a preffix for verbs)<br />
 <br />
 Urartian: shalur (medlar)<br />
 Kurdish: shalor شەلۆر (nectarine)<br />
@@ -1877,7 +1877,7 @@ Labels:
 </div>
 </p>
 </div>
-<!--Can't find substitution for tag [adEnd]-->
+<!--Can't find substitution for break_tag [adEnd]-->
 <script type="text/javascript"><!--
 google_ad_client="pub-1153262134367134";
 google_ad_host="pub-1556223355139109";
@@ -1895,8 +1895,8 @@ google_color_text="1B0431";
 <script type="text/javascript"
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<!--Can't find substitution for tag [adStart]-->
-<!--Can't find substitution for tag [adEnd]-->
+<!--Can't find substitution for break_tag [adStart]-->
+<!--Can't find substitution for break_tag [adEnd]-->
 </div>
 <div class='blog-pager' id='blog-pager'>
 <span id='blog-pager-newer-link'>
